stopped table going off screen on small windows

--- a/style.css
+++ b/style.css
@@ -53,4 +53,5 @@ tr:nth-child(even) {
 }
 #more {
   display: none;
+  overflow-x:auto;
 }
